--- a/app_pedidos/static/assets/css/mbr-additional.css
+++ b/app_pedidos/static/assets/css/mbr-additional.css
@@ -818,8 +818,10 @@ a {
   z-index: 1;
 }
 .cid-uekBltbY7R .navbar-brand img {
-  max-width: 100%;
-  max-height: 100%;
+  display: block;
+  margin: 0 auto; /* Ajustar márgenes para centrar horizontalmente */
+  max-height: 100%; /* Asegurar que la altura no exceda el tamaño de su contenedor */
+  height: auto; /* Para mantener la proporción de aspecto */
 }
 .cid-uekBltbY7R .navbar-brand .navbar-caption {
   line-height: inherit !important;
