--- a/app_pedidos/templates/index.html
+++ b/app_pedidos/templates/index.html
@@ -53,7 +53,7 @@
 						<img src="{% static 'assets/imagenes/logo_don_peter.png' %}" alt="" style="height: 6.5rem;">
 					</a>
 				</span>
-				<span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="">DonPeter - Portal de Pedidos</a></span>
+				<span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="">DonPeter - Portal</a></span>
 			</div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<div class="hamburger">
@@ -65,7 +65,7 @@
 			</button>
 			<div class="collapse navbar-collapse opacityScroll" id="navbarSupportedContent">
 				<ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-						<a class="nav-link link text-black display-4" href="">Pedidos</a>
+						<a class="nav-link link text-black display-4" href="{% url 'pedidos' %}">Pedidos</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link link text-black display-4" href="" aria-expanded="false">Nosotros</a>
