--- a/app_pedidos/templates/index.html
+++ b/app_pedidos/templates/index.html
@@ -67,12 +67,11 @@
 				<ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
 						<a class="nav-link link text-black display-4" href="{% url 'pedidos' %}">Pedidos</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link link text-black display-4" href="" aria-expanded="false">Nosotros</a>
+                    <li class="nav-item">
+						<a class="nav-link link text-black display-4" href="{% url 'horario_diario' %}">Horario laboral</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link link text-black display-4" href="">Equipo</a>
-					</li></ul>
+					
+					</ul>
 				
 				<div class="navbar-buttons mbr-section-btn">
 					<a class="btn btn-primary display-4" href="">Ordenar Ahora</a>
