--- a/app_pedidos/templates/webpay/plus/commit.html
+++ b/app_pedidos/templates/webpay/plus/commit.html
@@ -1,14 +1,34 @@
 <html>
     {% load humanize %}
+    {% load static %}
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplo Webpay Plus - Confirmar Transacci&oacute;n</title>
+    <title>Ejemplo Webpay Plus - Confirmar Transacción</title>
+    <link rel="stylesheet" href="{% static 'assets/donpeter2.css' %}">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  
+    <!-- Opcional: Enlace al archivo CSS de Bootstrap Grid -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap-grid.min.css" rel="stylesheet">
+    
+    <!-- Opcional: Enlace al archivo CSS de Bootstrap Reboot -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap-reboot.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/css/style(1).css' %}">
+    <link rel="stylesheet" href="{% static 'assets/css2' %}" as="style">
+    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;700&display=swap&display=swap"></noscript>
+    <link rel="stylesheet" href="{% static 'assets/css/mbr-additional.css' %}"><link rel="stylesheet" href="{% static 'assets/css/mbr-additional.css' %}" type="text/css">
+    
+    <link rel="stylesheet" href="{% static 'assets/css/custom.css' %}">
+    
+    
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 
 <body class="container">
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Ejemplo Webpay Plus - Confirmar Transacci&oacute;n</a></li>
+        <li class="breadcrumb-item"><a href="#">Ejemplo Webpay Plus - Confirmar Transacción</a></li>
         <li class="breadcrumb-item active" aria-current="page">Step: Commit Transaction</li>
     </ol>
 </nav>
@@ -17,11 +37,10 @@
     <h3>request</h3>
     token_ws: {{ token }}
 </div>
-<div class="alert alert-primary" role="alert">
-    <h3>result</h3>
+<div class="alert alert-primary" role="alert" style="background-color: #484848; font-size: 70%;">
+    <h3 >result</h3>
     {{ response }}
 </div>
-
 
 {% if response.status != 'FAILED' %}
 <b><p><samp style="color: rgb(0, 185, 0);">Pago Aceptado por webpay</samp></p></b>
@@ -37,7 +56,7 @@
         </tr>
     </thead>
     <tbody>
-        {% for prod in productos%}
+        {% for prod in productos %}
         <tr>
             <td>{{ prod.id_boleta }}</td>
             <td>{{ prod.id_producto }}</td>
@@ -50,14 +69,30 @@
     <tr><td><h6>Total Compra: ${{ total|intcomma }}</h6></td>
     </tr>
 </table>
+
+<!-- Formulario para capturar detalles del pedido -->
+
+<div class="container mt-4">
+    <h3>Detalles del Pedido</h3>
+
+    <div class="mb-3">
+        <label for="id_nombre_cliente">Nombre del Cliente:</label>
+        <span>{{ detalles.nombre_cliente }}</span>
+    </div>
+    <div class="mb-3">
+        <label for="id_telefono_cliente">Teléfono del Cliente:</label>
+        <span>{{ detalles.telefono_cliente }}</span>
+    </div>
+    <div class="mb-3">
+        <label for="id_detalles">Detalles:</label>
+        <span>{{ detalles.detalles }}</span>
+    </div>
+</div>
+
 {% else %}
 <b><p><samp style="color: rgb(255, 0, 0);">Pago Rechazado por webpay</samp></p></b>
 {% endif %}
 <br>
-<form action="/webpay-plus/refund" method="POST">
-    <input type="hidden" name="token_ws" value="{{ token }}">
-    <input type="hidden" name="amount" value="{{ response.amount }}">
-</form>
 <a href="/">&laquo; volver a index</a>
 </body>
 </html>
